# ws_jaka

./: Dockerfile  README.md
src/cpp_test/: CMakeLists.txt  package.xml
src/cpp_test/config/: test_collison_rviz2.rviz
src/cpp_test/launch/: test_collison_rviz2.launch.py
src/cpp_test/src/: test_collision_rviz2.cpp
src/dual_arm/: CMakeLists.txt  package.xml
src/dual_arm/config/: joint_names_dual_arm.yaml
src/dual_arm/launch/: display.launch  gazebo.launch
src/dual_arm/urdf/: dual_arm.csv  dual_arm.urdf
src/py_test/: package.xml  setup.py
src/py_test/launch/: test_collison.launch.py  test_collison_rviz2.launch.py  test_urdf.launch.py  test_urdf_no_gui.launch.py
src/py_test/py_test/: __init__.py  test_collision.py  test_collision_rviz2.py
src/test_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/test_moveit/config/: dual_arm.ros2_control.xacro  dual_arm.srdf  dual_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/test_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/wheel_dual_arm_robot/: CMakeLists.txt  package.xml
src/wheel_dual_arm_robot/config/: joint_names_wheel_dual_arm_robot.yaml
src/wheel_dual_arm_robot/launch/: display.launch  gazebo.launch  test_urdf.launch.py
src/wheel_dual_arm_robot/meshes/: arm_base_link.STL  b-l1.STL  base_arm_link.STL  l1.STL  r1.STL
(+2 files in other folders)
